STOP POSTING ABOUT scrollbars

--- a/styles.css
+++ b/styles.css
@@ -16,5 +16,6 @@ body {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
+    overflow: hidden;
 }
 
